[project]
name = "ask-cmd"
version = "0.3.0"
description = "Generate safe shell commands using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "distro>=1.9.0",
    "llm>=0.28",
]

[project.scripts]
ask = "ask_cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
